@@ -25,4 +25,17 @@ along with this software (see the LICENSE.md file). If not, see
     <eeca entity="mantle.account.invoice.Invoice" on-create="true" on-update="true" run-on-error="false">
         <actions><service-call name="mantle.account.InvoiceServices.checkSet#InvoiceDueDate" in-map="[invoiceId:invoiceId]"/></actions>
     </eeca>
+
+    <!-- update Payment totals (appliedTotal, unappliedTotal) on changes to Payment and PaymentApplication -->
+    <eeca entity="mantle.account.payment.Payment" on-create="true" on-update="true" run-on-error="false" get-entire-entity="true" run-before="true">
+        <actions>
+            <set field="entityValue.amount" from="entityValue.amount ?: 0.0"/>
+            <set field="entityValue.appliedTotal" from="entityValue.appliedTotal ?: 0.0"/>
+            <set field="entityValue.unappliedTotal" from="entityValue.amount - entityValue.appliedTotal"/>
+        </actions>
+    </eeca>
+    <eeca entity="mantle.account.payment.PaymentApplication" on-create="true" on-update="true" on-delete="true" run-on-error="false" get-entire-entity="true">
+        <condition><expression>paymentId</expression></condition>
+        <actions><service-call name="mantle.account.PaymentServices.update#PaymentTotals" in-map="[paymentId:paymentId]"/></actions>
+    </eeca>
 </eecas>
