@@ -145,11 +145,38 @@ along with this software (see the LICENSE.md file). If not, see
 
             <entity-find entity-name="mantle.account.payment.PaymentApplication" list="paymentApplicationList">
                 <econdition field-name="paymentId"/></entity-find>
-            <set field="appliedTotal" from="0"/>
+            <set field="appliedTotal" from="0.0"/>
             <iterate list="paymentApplicationList" entry="paymentApplication">
                 <set field="appliedTotal" from="appliedTotal + paymentApplication.amountApplied"/></iterate>
 
             <set field="unappliedTotal" from="paymentTotal - appliedTotal"/>
+        </actions>
+    </service>
+    <service verb="update" noun="PaymentTotals">
+        <description>Update appliedTotal and unappliedTotal fields on an Payment based PaymentApplication records, called by EECA on PaymentApplication</description>
+        <in-parameters><parameter name="paymentId" required="true"/></in-parameters>
+        <actions>
+            <entity-find-one entity-name="mantle.account.payment.Payment" value-field="payment"/>
+            <service-call name="mantle.account.PaymentServices.get#PaymentTotals" in-map="[paymentId:paymentId]" out-map="totalOut"/>
+            <set field="payment.appliedTotal" from="totalOut.appliedTotal"/>
+            <set field="payment.unappliedTotal" from="totalOut.unappliedTotal"/>
+            <entity-update value-field="payment"/>
+        </actions>
+    </service>
+    <service verb="calculate" noun="MissingPaymentTotals" transaction-timeout="600">
+        <description>This is a simple service not meant for very large Payment tables and mainly for migration from older versions
+            of mantle-usl before the appliedTotal and unappliedTotal fields were added.</description>
+        <in-parameters><parameter name="calculateAll" type="Boolean" default="false"/></in-parameters>
+        <actions>
+            <entity-find entity-name="mantle.account.payment.Payment" list="paymentList">
+                <econdition field-name="unappliedTotal" operator="is-null" ignore="calculateAll"/></entity-find>
+            <iterate list="paymentList" entry="payment">
+                <service-call name="mantle.account.PaymentServices.get#PaymentTotals" in-map="[paymentId:payment.paymentId]"
+                              out-map="totalOut" out-map-add-to-existing="false"/>
+                <set field="payment.appliedTotal" from="totalOut.appliedTotal"/>
+                <set field="payment.unappliedTotal" from="totalOut.unappliedTotal"/>
+                <entity-update value-field="payment"/>
+            </iterate>
         </actions>
     </service>
 
