@@ -25,6 +25,9 @@ New Features
 - Invoice now has invoiceTotal, appliedPaymentsTotal, unpaidTotal fields
   populated automatically; for older data run the
   calculate#MissingInvoiceTotals service to populate these
+- Payment now has appliedTotal, unappliedTotal fields populated
+  automatically; for older data run the calculate#MissingPaymentTotals
+  service to populate these
 
 Bug Fixes
 
